# tendermod

./: .env  ARCHITECTURE.md  CERTIFICACIONES_PERSONAL.xlsx  CERTIFICACIONES_PERSONAL_2.xlsx  CLAUDE.md  README.md  Requerimientos_Pliego_Ciberseguridad.xlsx  arquitectura_extraccion_pliegos.md  dump.rdb  experiencia_chunks.jsonl  pyproject.toml  tendermod_resultados_28-2.xlsx
CHROMA_PERSIST_DIR/: chroma.sqlite3
GOLD EXAMPLES/: ANE - PLIEGO DE CONDICIONES.xlsx  ARMADA - ESCANEADO.xlsx  DIAN - Anexo_ No. 5 Pliego de Condiciones-SASI-00-013-2025.xlsx  FNA - Requerimientos del Pliego.xlsx  SEC_GOB - 2_Pliego_Condiciones Definitivo (1).xlsx  U NACIONAL.xlsx
audit/: INFORME_AUDITORIA_2026-05-10_0719.md  comparator.py  gold_parser.py  reporter.py  resultados_auditoria_2026-05-10_0719.xlsx  run_audit.py  tendermod_runner.py
spec/: 01_plan_implementacion_evaluacion_cumplimiento.md  02_fases_implementacion.md  03_fase2_filtro_semantico_objeto.md  04_mvp_django_interfaz_web.md  05_bugs_score_objeto_extraction.md  06_formato_valores_monetarios.md  07_experiencia_multi_condicion_opcion1.md  08_requisitos_generales_checklist_qa.md  09_mejora_extraccion_requisitos_habilitantes.md  10_extraccion_comprehensiva_requerimientos.md  11_modulo_evaluacion_equipo.md  12_audit_calidad_codigo.md  13_clasificacion_obligaciones.md  14_evaluacion_automatica.md  15_mejora_formC_requisitos_generales.md  16_mejoras_efectividad_precision.md  17_agente_conversacional_redneet.md  18_llm_filtro_objeto_experiencia.md  AUDITORIA.md  MANUAL_DESPLIEGUE_LINUX.md  MANUAL_DESPLIEGUE_WINDOWS.md
(+99 files in other folders)
